fixed spacing at open collaps element + added line after each

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -559,6 +559,7 @@ body {
     color: $brand !important;
     padding-left: 16px;
     z-index: 5;
+    padding-top: 20px;
     @include collapsPseudo($brand, '—', 16px);
   }
 
@@ -567,25 +568,38 @@ body {
     @include collapsPseudo($text-dark, '+', 20px);
   }
 
-  &-collapse {
-    // top: -70px;
-    &-item {
+  &-collaps-item {
+    position: relative;
+    transition: all 0.8s ease;
+    &::after {
+      content: '';
+      position: absolute;
+      display: block;
+      border: 1px solid #c4c4c4;
+      width: 100%;
+      height: auto;
+      bottom: -36%;
+      left: 0%;
+      z-index: -1;
     }
   }
-}
 
-.questions-collaps-item.show {
-  position: relative;
-  margin-bottom: 24px;
-  &:before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    box-shadow: 0px 0px 18px rgba(68, 68, 68, 0.09);
-    background-color: #fff;
-    z-index: -1;
+  &-collaps-item.show {
+    margin-bottom: 10px;
+    &::after {
+      visibility: hidden;
+    }
+
+    &:before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      box-shadow: 0px 0px 18px rgba(68, 68, 68, 0.09);
+      background-color: #fff;
+      z-index: -1;
+    }
   }
 }
