--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -16,7 +16,7 @@
     position: absolute;
     font-size: $size;
     color: $color !important;
-    top: 50%;
+    top: 60%;
     right: 2%;
     transform: translate(0, -50%);
   }
